--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 sudo: false
 language: node_js
 node_js:
+  - 'node'
   - 'iojs'
-  - '0.12'
-  - '0.10'
+  - '6'
+  - '5'
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
