--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-material": "^1.0.8"
+    "angular-material": "^1.0.8",
+    "angulartics-google-analytics": "^0.2.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
