--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,10 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-material": "^1.0.8",
-    "angulartics-google-analytics": "^0.2.0"
+    "angulartics-google-analytics": "^0.2.0",
+    "lodash": "^4.13.1",
+    "moment": "^2.14.1",
+    "moment-duration-format": "^1.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
